# meta-gpt

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile.dev  Dockerfile.dgx
src/: cli.rs  error.rs  gpt.rs  lib.rs  model.rs  terminal.rs  text.rs  utils.rs
