[package]
name = "meta-gpt"
version = "0.11.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Metagenomic diagnostic agents using generative pretrained transformers"
documentation = "https://github.com/esteinig/cerebro"
homepage = "https://github.com/esteinig/cerebro"
repository = "https://github.com/esteinig/cerebro"
readme = "README.md"
keywords = ["meta-gpt", "cerebro", "llm", "metagenomics", "diagnostics"]
categories = ["science"]
license = "GPL-2"
edition = "2024"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[[bin]]
name = "meta-gpt"
path = "src/cli.rs"

[lib]
name = "meta_gpt"

[dependencies]

cerebro-model = { git = "https://github.com/esteinig/cerebro", package = "cerebro-model", branch = "main" }
cerebro-pipeline = { git = "https://github.com/esteinig/cerebro", package = "cerebro-pipeline", branch = "main" }


anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4"
csv = "1.2"
colored = "2.0"
wax = "0.5.0"
needletail = "0.5.1"
globwalk = "0.9.1"
ansi_term = "0.12.1"
chrono = "0.4.37"
niffler = "2.5.0"
anstyle = "1.0.6"
actix-web-httpauth = "0.8.0"
async-openai = "0.28.0"
petgraph = "0.7.1"
anthropic-api = "0.0.5"
serde_plain = "1.0.2"
plotters = "0.3.7"
regex = "1.11.1"
nvml-wrapper = "0.10.0"

serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.9.0", features = ["color"] }
notify = { version = "6.1.1", features = ["serde"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
tokio = { version = "1.44.1", features = ["process", "rt-multi-thread"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }

tokenizers = { version = "0.21.1" }
hf-hub = { version = "0.4.2" }

candle-core = { version = "0.9.1", features = ["cuda"], optional = true }
candle-transformers = { version = "0.9.1", features = ["cuda"], optional = true }

[features]
default = []
local = ["candle-core", "candle-transformers"]
